[metadata]
name = interception_py
version = 0.0.1
author = Ivan Buldakov
author_email = iv081198@yandex.ru
description = port  of interception dll to python, it communicates directly with interceptions driver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GanterPenguin/interception_py
project_urls =
    Bug Tracker = https://github.com/GanterPenguin/interception_py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src